--- a/deep_learning/cnn.ipynb
+++ b/deep_learning/cnn.ipynb
@@ -902,15 +902,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the test-set into smaller batches of this size.\n",
     "test_batch_size = 128\n",
     "\n",
-    "def print_test_accuracy(show_example_errors=False,\n",
-    "                        show_confusion_matrix=False):\n",
+    "def print_test_accuracy(show_confusion_matrix=False):\n",
     "\n",
     "    # Number of images in the test-set.\n",
     "    num_test = X_te2.shape[0]\n",
@@ -963,7 +962,11 @@
     "\n",
     "    # Print the accuracy.\n",
     "    msg = \"Accuracy on Test-Set: {0:.1%} ({1} / {2})\"\n",
-    "    print(msg.format(acc, correct_sum, num_test))\n"
+    "    print(msg.format(acc, correct_sum, num_test))\n",
+    "\n",
+    "    if show_confusion_matrix:\n",
+    "        print(\"Confusion Matrix:\")\n",
+    "        plot_confusion_matrix(cls_pred=cls_pred)"
    ]
   },
   {
@@ -1337,27 +1340,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on Test-Set: 87.7% (799 / 911)\n"
+      "Accuracy on Test-Set: 87.7% (799 / 911)\n",
+      "Confusion Matrix:\n",
+      "[[158  56]\n",
+      " [ 56 641]]\n"
      ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQwAAAD0CAYAAABuOhhTAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAEuRJREFUeJzt3X2MXcV9xvHvYwM24cUGTFzXdgsK\nLsitZGNc12mqCHBLDE1jWiUIVBVDLa2akoiINo37IrWpKjVRpNDQpqhOTTFpQqC0CCt14zgGSmiA\nYMAY8xYWWgu7Bse8uNS8GHZ//ePMhpvt7t65u/fu3HP3+UijPWfu7Dnj9e5P83JmjiICM7Mc00pX\nwMzqwwHDzLI5YJhZNgcMM8vmgGFm2RwwzCybA4aZZXPAMLNsDhhmlu2o0hUwm8o+dN5x8dLLA1ll\nH9r11taIWN3hKo3JAcOsoIMvD/DA1gVZZY+e9+ycDlenKQcMs6KCgRgsXYlsDhhmBQUwSH0WgDpg\nmBU2iFsYZpYhCAZqtMWEp1XHSdJqSU9L6pe0vnR9eo2kGyQdkLS7dF06bZDISt3AAWMcJE0Hvgxc\nCCwGLpO0uGytes6NQNEpxMkQwACRlbqBuyTjswLoj4jnACR9A1gDPFG0Vj0kIu6RdFrpenRaAG/X\naJbELYzxmQ8833C+N+WZtWwwM3UDtzDMCoou6m7kcMAYn33AwobzBSnPrDUBA/WJF+6SjNODwCJJ\np0s6BrgU2Fy4TlZD1YNb7euSSJot6TZJT0l6UtL7JZ0saZukZ9LXk1JZSbouzfTtkrSs2fUdMMYh\nIt4BPgFsBZ4Ebo2Ix8vWqrdIuhm4DzhT0l5J60rXqTPEQGbK9CXgWxFxFrCE6vdzPbA9IhYB29M5\nVLN8i1LqA65vdnF3ScYpIrYAW0rXo1dFxGWl6zAZAhhsU5dE0izgg8AVABFxBDgiaQ1wbiq2Cbgb\n+AzVzN5NUb2c6P7UOpkXEftHu4cDhllBARxpX0P/dOCHwD9IWgI8BFwNzG0IAi8Ac9PxaLN9owYM\nd0nMChsMZSVgjqQdDalv2KWOApYB10fE2cBh3u1+AJBaE+Nu07iFYVZQ9aRn9vjEwYhYPsbne4G9\nEfFAOr+NKmC8ONTVkDQPOJA+b3m2zy0Ms4ICMcC0rNT0WhEvAM9LOjNlraJ6+ngzsDblrQXuSMeb\ngcvTbMlK4NBY4xfgFsaESOqLiA2l69HLpsLPOHU32uWTwNfSdP9zwJVUDYNb00zTHuCSVHYLcBHQ\nD7yeyo7JAWNi+oCe/mXuAj39M26xS9L8ehE7gZG6LatGKBvAVa1c3wHDrCgxEPUZGeiqgHHM0cfF\nzBmzS1cj28wZszjx+Pk1erAXOPxG6Rq0ZCbv4USdXKuf8Zsc5ki8ldVsCOBtpne4Ru3TVQFj5ozZ\nrFj68dLV6Gn63qOlq9DzHojt2WUj3MIwsxYMtnEMo9McMMwKqgY93cIwsyzukphZpmp5uwOGmWUI\nxJHwLImZZRp0l8TMcnjQ08yyBWKgvWtJOsoBw6wwD3qaWZYIPK1qZrnkJz3NLE8AR6I+f4b1qalZ\nDwrU7g10OsoBw6wwT6uaWZbqvSQOGGaWpaW3mhXngGFWkFsYZtYStzDMLEuEeHuwPn+G9ampWQ+q\n9sNwC8PMsnjHLTPLVA16uoVhZpn84JaZZfGj4WbWEu+HYWZZIuDtwfoEjPrU1KwHVV2SaVkph6T/\nkvSYpJ2SdqS8kyVtk/RM+npSypek6yT1S9olaVmz6ztgmBU2kNaTNEstOC8ilkbE8nS+HtgeEYuA\n7ekc4EJgUUp9wPXNLuyAYVbQ0LRqTpqANcCmdLwJuLgh/6ao3A/MljRvrAs5YJgV1d4uCVUM+rak\nhyT1pby5EbE/Hb8AzE3H84HnG753b8oblQc9zQpr4dHwOUPjEsmGiNgwrMwvRcQ+Se8Ftkl6qvHD\niAhJMd66OmCYFVTtGp4dMA42jEuMcr3Yl74ekHQ7sAJ4UdK8iNifuhwHUvF9wMKGb1+Q8kblLolZ\nQYF4Z3B6VmpG0nGSThg6Bi4AdgObgbWp2FrgjnS8Gbg8zZasBA41dF1G5BaGWWFtXK06F7hdElR/\n21+PiG9JehC4VdI6YA9wSSq/BbgI6AdeB65sdgMHDLOC2rn4LCKeA5aMkP8SsGqE/ACuauUeDhhm\nhXmLPjPLM/FnLCaVA4ZZQd5xy8xa4haGmWUJ4B2vVq1IWi3p6bQabn3z7zCbWoY20OnwWpK26VjA\nkDQd+DLVirjFwGWSFnfqfmZ1NYiyUjfoZAtjBdAfEc9FxBHgG1Sr48xsSEzKatW26eQYxkgr4X5h\neKG0oq4PYOaMWR2sjln38a7hLUqr7TYAnHj8/HGvojOrKweMSssr4cymmkAMeJYEgAeBRZJOl3QM\ncCnV6jgza1CnQc+OtTAi4h1JnwC2AtOBGyLi8U7dz6yOItwl+ZGI2EK1hNbMRhEOGGaWp3umTHM4\nYJgV5haGmWXxcxhmlq+1TYCLc8AwKyhwl8TMsnnQ08xaEDVaEOGAYVaYuyRmliXCAcPMWuAxDDPL\nNjjogGFmGQK5S2Jm+Wo0SeKAYVaUBz3NrCU1amI4YJgVVqcWRn02EzTrUdWzGM1TLknTJT0i6Zvp\n/HRJD6QXit2StsxE0ox03p8+P63ZtR0wzAqKgBiclpVacDXwZMP554FrI+IM4BVgXcpfB7yS8q9N\n5cbkgGFWWDtbGJIWAL8K/H06F3A+cFsqsgm4OB2vSeekz1el8qNywDArLTITzJG0oyH1jXC1vwL+\nABhM56cAr0bEO+l8L9VLxqDhZWPp80Op/Kg86GlWVEsPbh2MiOWjXkn6MHAgIh6SdG47ajecA4ZZ\nae2bVv0A8BFJFwEzgROBLwGzJR2VWhGNLxQbetnYXklHAbOAl8a6gbskZiWlB7dyUtNLRfxhRCyI\niNOoXhx2Z0T8JnAX8NFUbC1wRzrenM5Jn98ZMfZoiQOGWWn5Yxjj9RngGkn9VGMUG1P+RuCUlH8N\nsL7ZhdwlMSutAw9uRcTdwN3p+DlgxQhl3gQ+1sp1HTDMSvOj4WaWJehIC6NTHDDMCvMmwGaWrxcD\nhqQZEfFWJytjNiXVqEvSdFpV0gpJjwHPpPMlkv664zUzmwoCNJiXukHOcxjXAR8mPQEWEY8C53Wy\nUmZTh6oWRk7qAjldkmkRsWfYIraBDtXHbOrpsTGM5yWtAELSdOCTwA86Wy2zKaTHAsbHqbolPwW8\nCHwn5ZlZO/RSwIiIA1QLWcys3XrtwS1JX2GEGBgRI23eYWYtUi+1MKi6IENmAr9O2qXHzNqglwJG\nRNzSeC7pq8C9HanN4TfQ9x7tyKWtsvW/d5auQs9b8aHXWyrfay2M4U4H5ra7ImZTVo+NYbzCu42m\nacDLZGy0YWYZJr45zqQaM2CkLceX8O4egIPNtvAysxbV6C9qzEfDU3DYEhEDKdXon2ZWD4q81A1y\n1pLslHR2x2tiNlV1fk/Pthm1S9KwLfnZwIOSngUOA6JqfCybpDqa9SxF96xEzTHWGMb3gWXARyap\nLmZTU4/MkgggIp6dpLqYTU1d0t3IMVbAOFXSNaN9GBFf7EB9zKacbhnQzDFWwJgOHE9qaZhZh/RI\nwNgfEX8+aTUxm4q6aMo0R9MxDDPrsB4JGKsmrRZmU1idplVHfXArIl6ezIqYWffzi4zMSqtRlyTn\n0XAz65TMdSQ5A6OSZkr6vqRHJT0u6bMp/3RJD0jql3SLpGNS/ox03p8+P63ZPRwwzEpr31qSt4Dz\nI2IJsBRYLWkl8Hng2og4A3gFWJfKrwNeSfnXpnJjcsAwK61NASMq/5tOj04pgPOB21L+JuDidLwm\nnZM+X6VhLyAazgHDrCDRUpdkjqQdDen/bcQtabqkncABYBvwLPBqWkgKsBeYn47nk/bnTZ8fAk4Z\nq74e9DQrqbXVqgcjYvmYl4sYAJZKmg3cDpw1sQr+OLcwzErrwH4YEfEqcBfwfmC2pKHGwQLe3UFv\nH7AQqu0sgFmkdyiPxgHDrLQ2BQxJp6aWBZKOBX4FeJIqcHw0FVsL3JGON6dz0ud3NttVz10Ss8La\nuJZkHrApvQN5GnBrRHxT0hPANyT9BfAIsDGV3wh8VVI/1ebeTd9w6IBhVlqbAkZE7KLaIW94/nPA\nihHy3wQ+1so9HDDMSuqi/TpzOGCYFVanxWcOGGaF9cp+GGY2GRwwzCyLxzDMLJeo19Z2DhhmpbmF\nYWa5POhpZvk8rWpmWXroNQNmNhkcMMwsl1sYZpbPAcPMcrmFYWZ5/KSnmeUSXq1qZq2oUQujY3t6\nSrpB0gFJuzt1D7NeoIis1A06uQnwjcDqDl7frP5yNwDujnjRuS5JRNyT865Gs6nOsyQtSG9v6gOY\nyXsK18asAAeMfBGxAdgAcKJOrtGPzqw93MIwszytvSqxOAcMs9Jq1MLo5LTqzcB9wJmS9kpa16l7\nmdVVi29vL66TsySXderaZj2lS56xyOEuiVlh3dJ6yOGAYVZSFz2UlcMBw6ywOs2SdPLRcDPLoMG8\n1PQ60kJJd0l6QtLjkq5O+SdL2ibpmfT1pJQvSddJ6pe0S9KyZvdwwDArKagGPXNSc+8AvxcRi4GV\nwFWSFgPrge0RsQjYns4BLgQWpdQHXN/sBg4YZoW1a1o1IvZHxMPp+DXgSWA+sAbYlIptAi5Ox2uA\nm6JyPzBb0ryx7uGAYVZa/mrVOZJ2NKS+0S6ZFn6eDTwAzI2I/emjF4C56Xg+8HzDt+1NeaPyoKdZ\nQUMPbmU6GBHLm15TOh74Z+BTEfE/0rtvb42IkMY/kesWhllJueMXmQ93STqaKlh8LSL+JWW/ONTV\nSF8PpPx9wMKGb1+Q8kblgGFWWBtnSQRsBJ6MiC82fLQZWJuO1wJ3NORfnmZLVgKHGrouI3KXxKyw\nNj7p+QHgt4DHJO1MeX8EfA64Na3n2gNckj7bAlwE9AOvA1c2u4EDhllJAQy2J2JExL1UwyIjWTVC\n+QCuauUeDhhmpfnRcDPL5cVnZpbPy9vNLJdbGGaWRQFq06DnZHDAMCutRsvbHTDMCuuW1yDmcMAw\nK8k7bplZvvx1It3AAcOsMM+SmFk+tzDMLEuABhwwzCxXfeKFA4ZZaZ5WNbN8DhhmliXwk55mlkeE\nuyRm1gIHDDPLEoCnVc0sl7skZpbPAcPM8njxmZnlGnp7e004YJiV5ucwzCyXBz3NLE8AA/VpYjhg\nmBXlQc9xe41XDn4nbttTuh4tmAMcLF2JVkyfV7oGLavdzxj46ZZKO2CMT0ScWroOrZC0IyKWl65H\nL5sSP+MaBYxppStgNqUNvb09J2WQdIOkA5J2N+SdLGmbpGfS15NSviRdJ6lf0i5Jy5pd3wHDrKiA\nGMxLeW4EVg/LWw9sj4hFwPZ0DnAhsCilPuD6Zhd3wJiYDaUrMAX09s94aJYkJ+VcLuIe4OVh2WuA\nTel4E3BxQ/5NUbkfmC1pzFEuB4wJiIiO/DJLGpC0U9JuSf8k6T0TuNa5kr6Zjj8iaf0YZWdL+t1x\n3OPPJP3+eOs4lk79jLtKRF4av7kRsT8dvwDMTcfzgecbyu1NeaNywOhOb0TE0oj4OeAI8DuNH6a+\nZ8v/dxGxOSI+N0aR2UDLAcMmKD9gzJG0oyH1tX6rmNC71hwwut93gTMknSbpaUk3AbuBhZIukHSf\npIdTS+R4AEmrJT0l6WHgN4YuJOkKSX+TjudKul3Soyn9IvA54H2pdfOFVO7Tkh5Mg2KfbbjWH0v6\ngaR7gTMn7afRczKDRRUwDkbE8oaU2/p6cairkb4eSPn7gIUN5RakvFE5YHQxSUdRDUw9lrIWAX8b\nET8LHAb+BPjliFgG7ACukTQT+Arwa8A5wE+McvnrgH+PiCXAMuBxqsGwZ1Pr5tOSLkj3XAEsBc6R\n9EFJ5wCXpryLgJ9v8z996ghgcDAvjd9mYG06Xgvc0ZB/eWqxrgQONXRdRtRVz2HYjxwraWc6/i6w\nEfhJYE8anAJYCSwG/kMSwDHAfcBZwH9GxDMAkv6RagR8uPOBywEiYgA4NDTd1uCClB5J58dTBZAT\ngNsj4vV0j80T+tdOdW18DkPSzcC5VN2XvcCfUrUcb5W0DtgDXJKKb6EK+P3A68CVza7vgNGd3oiI\npY0ZKSgcbswCtkXEZcPK/dj3TZCAv4yIvxt2j0+18R7WxoAx/PehwaoRygZwVSvXd5ekvu4HPiDp\nDABJx0n6GeAp4DRJ70vlRvsF2g58PH3vdEmzgNeoWg9DtgK/3TA2Ml/Se4F7gIslHSvpBKruj41H\nBDEwkJW6gQNGTUXED4ErgJsl7SJ1RyLiTaouyL+mQc8Do1ziauA8SY8BDwGLI+Ilqi7ObklfiIhv\nA18H7kvlbgNOiIiHgVuAR4F/Ax7s2D90Kmjjk56dpqjRc+xmvWbWUafG+09Yk1V266sbHyq9rsZj\nGGYlRUx0BmRSOWCYlVajVr4Dhllh4RaGmeXxjltmliuALpkyzeGAYVZQANElU6Y5HDDMSopoZXOc\n4hwwzAqrUwvDD26ZFSTpW1Q7o+c4GBHDt9+bVA4YZpbNa0nMLJsDhpllc8Aws2wOGGaWzQHDzLI5\nYJhZNgcMM8vmgGFm2RwwzCzb/wGsZ6EtlYXgVwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x122c626a0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print_test_accuracy()"
+    "print_test_accuracy(show_confusion_matrix=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def plot_confusion_matrix(cls_pred):\n",
+    "    # This is called from print_test_accuracy() below.\n",
+    "\n",
+    "    # cls_pred is an array of the predicted class-number for\n",
+    "    # all images in the test-set.\n",
+    "\n",
+    "    # Get the true classifications for the test-set.\n",
+    "    cls_true = y_te2\n",
+    "    \n",
+    "    # Get the confusion matrix using sklearn.\n",
+    "    cm = confusion_matrix(y_true=cls_true,\n",
+    "                          y_pred=cls_pred)\n",
+    "\n",
+    "    # Print the confusion matrix as text.\n",
+    "    print(cm)\n",
+    "\n",
+    "    # Plot the confusion matrix as an image.\n",
+    "    plt.matshow(cm)\n",
+    "\n",
+    "    # Make various adjustments to the plot.\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(num_classes)\n",
+    "    plt.xticks(tick_marks, range(num_classes))\n",
+    "    plt.yticks(tick_marks, range(num_classes))\n",
+    "    plt.xlabel('Predicted')\n",
+    "    plt.ylabel('True')\n",
+    "\n",
+    "    # Ensure the plot is shown correctly with multiple plots\n",
+    "    # in a single Notebook cell.\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
