run to get the conv layer size

--- a/deep_learning/cnn_style_classification.ipynb
+++ b/deep_learning/cnn_style_classification.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,6 +475,7 @@
     "                         filter=weights,\n",
     "                         strides=[1, 1, 1, 1],\n",
     "                         padding='SAME')\n",
+    "    print(layer)\n",
     "\n",
     "    # Add the biases to the results of the convolution.\n",
     "    # A bias-value is added to each filter-channel.\n",
@@ -489,6 +490,8 @@
     "                               ksize=[1, 2, 2, 1],\n",
     "                               strides=[1, 2, 2, 1],\n",
     "                               padding='SAME')\n",
+    "    \n",
+    "    print(layer)\n",
     "\n",
     "    \n",
     "#     offset = tf.Variable(tf.constant(0.1, tf.float32, [num_filters]))\n",
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,9 +632,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Conv2D:0\", shape=(?, 100, 100, 32), dtype=float32)\n",
+      "Tensor(\"MaxPool:0\", shape=(?, 50, 50, 32), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "layer_conv1, weights_conv1 = \\\n",
     "    new_conv_layer(input=x_image,\n",
@@ -670,9 +682,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Conv2D_1:0\", shape=(?, 50, 50, 32), dtype=float32)\n",
+      "Tensor(\"MaxPool_1:0\", shape=(?, 25, 25, 32), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "layer_conv2, weights_conv2 = \\\n",
     "    new_conv_layer(input=layer_conv1,\n",
@@ -704,9 +725,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Conv2D_2:0\", shape=(?, 25, 25, 64), dtype=float32)\n",
+      "Tensor(\"MaxPool_2:0\", shape=(?, 13, 13, 64), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "layer_conv3, weights_conv3 = \\\n",
     "    new_conv_layer(input=layer_conv2,\n",
@@ -752,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +800,7 @@
        "<tf.Tensor 'Reshape_1:0' shape=(?, 10816) dtype=float32>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +859,7 @@
        "<tf.Tensor 'Relu_3:0' shape=(?, 128) dtype=float32>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
